--- a/_includes/social.html
+++ b/_includes/social.html
@@ -41,6 +41,16 @@
   </li>
   {% endif %}
 
+  {% if site.social.linkedin %}
+  <!-- Google Plus -->
+  <li class="navigation__item">
+    <a href="https://www.linkedin.com/in/shudong-sun-4a7172143/" title="Linkedin" target="_blank">
+      <i class='social fa fa-linkedin'></i>
+      <span class="label">Linkedin</span>
+    </a>
+  </li>
+  {% endif %}
+
   <!-- RSS -->
   <li class="navigation__item">
     <a href="/feed.xml" rel="author" title="RSS" target="_blank">
